<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".QuizActivity">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--</android.support.constraint.ConstraintLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="112dp"
            android:layout_height="59dp"
            android:backgroundTint="#81C784"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="110dp"
            android:layout_height="59dp"
            android:backgroundTint="#F06292"
            android:text="@string/false_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/rate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="zhanweifu!!!!!!!!!!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/prev_button"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_left"
            android:tint="#2196F3" />

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"
            />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="0.3"
            android:backgroundTint="#FBFBFB"
            android:contentDescription="@string/next_button"
            android:src="@drawable/arrow_right"
            android:tint="#9C27B0" />
    </LinearLayout>

</LinearLayout>